# Baywatchers

./: .coverage  .dockerignore  .env  .gitignore  Dockerfile  LICENSE  README.md  baywatchers.py  docker-compose.yml  generar-diagramas.bat  prueba.py  pyproject.toml  requirements.txt
app/: config.py  main.py  scheduler.py  scraper.py
app/api/: main.py  main_UML.puml
app/bot/: commands.py  notify.py  telegram_bot.py  telegrambot.py
app/db/: __init__.py  crud.py  models.py  models_UML.puml
docs/: README.md  api.md  arquitectura.md  guion.md  instalacion.md  manual_usuario.md  uml.md
swark-output/: 2025-06-01__23-43-19__diagram.md  2025-06-01__23-43-19__log.md
tests/: WHILE ON EARTH MOVE TRAINER _ Fittest Freakest - Ropa, accesorios y calzado para Training.html  fittest_product.html  prueba.py  pruebadb.py  scheduleranterior.py  scrapertest.py  test_api.py  test_api_main  test_checkinterval.py  test_crud.py  test_detener.py  test_estadisticas.py  test_misproductos.py  test_notify.py  test_price_stats.py  test_scheduler.py  test_scraper.py  test_start_help.py  test_telegrambot.py  test_vigilar.py  urlprueba.py
tests/WHILE ON EARTH MOVE TRAINER _ Fittest Freakest - Ropa, accesorios y calzado para Training_files/: 1127588014005015  array.js.descarga  client  config.js.descarga  events.js.descarga  inferredevents.js.descarga  js(1)  main-6B2EAAAR.js.descarga  microdata.js.descarga  scripts-DK45OUB7.js.descarga
tests/fittest_product/: 8803c22a46.js.descarga  b6d9befe-c585-451e-ae62-1320f10706d7  events.js.descarga  fonts.css  gtm.js.descarga  js  saved_resource  (+4 more)
(+7 files in other folders)
